EqualityPivot mostly implemented, LockedEqualityPivot added, before deletion of SymbolicInfinity