@@ -1,24 +1,27 @@
 package core.util;
 
+import com.google.common.collect.Multiset;
+import core.structure.equalitypivot.EqualityPivot;
 import core.structure.multicardinal.geo.circle.structure.*;
 import core.structure.multicardinal.geo.line.function.*;
 import core.structure.multicardinal.geo.line.structure.*;
 import core.structure.multicardinal.geo.point.structure.*;
 import core.structure.multicardinal.geo.point.function.*;
 import core.structure.multicardinal.geo.triangle.Triangle;
-import core.structure.unicardinal.alg.Variable;
-import core.structure.unicardinal.alg.directed.*;
-import core.structure.unicardinal.alg.directed.constant.*;
-import core.structure.unicardinal.alg.directed.function.*;
-import core.structure.unicardinal.alg.directed.operator.*;
-import core.structure.unicardinal.alg.symbolic.*;
-import core.structure.unicardinal.alg.symbolic.constant.*;
-import core.structure.unicardinal.alg.symbolic.operator.*;
+import core.structure.unicardinal.Unicardinal;
+import core.structure.unicardinal.Variable;
 import core.structure.Entity;
-import core.structure.unicardinal.*;
 import com.google.common.collect.TreeMultiset;
 import com.google.common.hash.Hashing;
-import core.structure.unicardinal.alg.symbolic.operator.SymbolicScale;
+import core.structure.unicardinal.alg.directed.DirectedVariable;
+import core.structure.unicardinal.alg.directed.constant.DirectedReal;
+import core.structure.unicardinal.alg.directed.function.Directed;
+import core.structure.unicardinal.alg.directed.operator.DirectedAdd;
+import core.structure.unicardinal.alg.directed.operator.DirectedScale;
+import core.structure.unicardinal.alg.symbolic.SymbolicVariable;
+import core.structure.unicardinal.alg.symbolic.constant.SymbolicInfinity;
+import core.structure.unicardinal.alg.symbolic.constant.SymbolicReal;
+import core.structure.unicardinal.alg.symbolic.operator.*;
 import core.util.comparators.MulticardinalComparator;
 import core.util.comparators.UnicardinalComparator;
 
@@ -77,13 +80,13 @@ public class Utils {
         }
     }};
 
-    public static final HashSet<Class<? extends Unicardinal>> CLOSED_FORM = new HashSet<>(Arrays.asList(
+    public static final HashSet<Class<? extends Unicardinal>> CLOSED_FORM = new HashSet<>(List.of(
             SymbolicInfinity.class,
             Variable.class
     ));
 
     public static String className(Object o) {
-        Class cls = o.getClass();
+        Class<?> cls = o.getClass();
         if (cls.getEnclosingClass() != null) {
             return cls.getEnclosingClass().getSimpleName();
         } else {
@@ -97,15 +100,22 @@ public class Utils {
 
     public static int compareInputs(Entity e1, Entity e2) {
         assert e1.getClass() == e2.getClass(): "Classes must be identical.";
-        HashMap<Entity.InputType<?>, TreeMultiset<? extends Entity>> inputs1 = e1.getInputs();
-        HashMap<Entity.InputType<?>, TreeMultiset<? extends Entity>> inputs2 = e2.getInputs();
+        HashMap<Entity.InputType<?>, TreeMultiset<EqualityPivot<?>>>
+                inputs1 = e1.getInputs(),
+                inputs2 = e2.getInputs();
         for (Entity.InputType<? extends Entity> inputType : e1.getInputTypes()) {
-            Iterator<? extends Entity> iter1 = inputs1.get(inputType).iterator();
-            Iterator<? extends Entity> iter2 = inputs2.get(inputType).iterator();
+            Iterator<Multiset.Entry<EqualityPivot<? extends Entity>>>
+                    iter1 = inputs1.get(inputType).entrySet().iterator(),
+                    iter2 = inputs2.get(inputType).entrySet().iterator();
             while (iter1.hasNext()) {
-                int inputComparison = inputType.compare(iter1.next(), iter2.next());
-                if (inputComparison != 0) {
-                    return inputComparison;
+                Multiset.Entry<EqualityPivot<? extends Entity>>
+                        entry1 = iter1.next(),
+                        entry2 = iter2.next();
+                int elementComparison = ((EqualityPivot) entry1.getElement()).compareTo(entry2.getElement());
+                if (elementComparison != 0) {
+                    return elementComparison;
+                } else if (entry1.getCount() != entry2.getCount()) {
+                    return -(entry1.getCount() - entry2.getCount());
                 }
             }
         }
@@ -122,28 +132,12 @@ public class Utils {
         return List.of(result);
     }
 
-    public static <T, S extends T> Collection<S> cast(Collection<? extends T> args) {
+    public static <T, S extends T> Collection<S> cast(Collection<T> args) {
         return (Collection<S>) args;
-    }
-
-    public static <T> void addToMultiset(TreeMap<T, Integer> map, T key, int count) {
-        map.put(key, map.getOrDefault(key, 0) + count);
     }
 
     public static <T> void addToMultiset(TreeMap<T, Double> map, T key, double count) {
         map.put(key, map.getOrDefault(key, 0.0) + count);
-    }
-
-    public static double gcd(double x, double y) {
-        x = Math.abs(x);
-        y = Math.abs(y);
-        double upper = Math.max(x, y), lower = Math.min(x, y);
-        while (lower > AlgEngine.EPSILON) {
-            double remainder = upper % lower;
-            upper = lower;
-            lower = remainder;
-        }
-        return upper;
     }
 
     public static int binomial(int a, int b) {
@@ -158,40 +152,6 @@ public class Utils {
             }
             return numerator / denominator;
         }
-    }
-
-    public static ArrayList<List<Integer>> sortedSubsetsBinary(int set) {
-        int k = Integer.bitCount(set);
-        if (k == 0) {
-            return new ArrayList<>(Collections.singletonList(new ArrayList<>(Collections.singletonList(0))));
-        } else {
-            int upper_bits = set & (set - 1);
-            int lowest_bit = set - upper_bits;
-            ArrayList<List<Integer>> lower = Utils.sortedSubsetsBinary(upper_bits);
-            List<List<Integer>> upper = Utils.map(lower, list -> Utils.map(list, arg -> arg | lowest_bit));
-            for (int i = 0; i < k - 1; i++) {
-                lower.get(i + 1).addAll(upper.get(i));
-            }
-            lower.add(upper.get(lower.size() - 1));
-            return lower;
-        }
-    }
-
-    public static ArrayList<List<Integer>> sortedContiguousSubsets(int setSize) {
-        ArrayList<List<Integer>> subsets = new ArrayList<>(List.of(List.of(0)));
-        int bound = 1 << setSize;
-        for (int i = 1; i <= setSize; i++) {
-            List<Integer> subsetList = new ArrayList<>();
-            int k = (1 << i) - 1;
-            while (k < bound) {
-                subsetList.add(k);
-                int lowest_bit = k & -k;
-                int ripple = k + lowest_bit;
-                k = ripple | (((k ^ ripple) >> 2) / lowest_bit);
-            }
-            subsets.add(subsetList);
-        }
-        return subsets;
     }
 
     public static <T> ArrayList<List<HashSet<T>>> sortedSubsets(List<T> args) {
@@ -213,55 +173,6 @@ public class Utils {
             lower.add(upper.get(lower.size() - 1));
             return lower;
         }
-    }
-
-    public static ArrayList<Integer> subsets(int n) {
-        return Utils.supersetHelper(0, n);
-    }
-
-    public static ArrayList<Integer> supersets(int subset, int superset) {
-        return Utils.supersetHelper(subset, subset ^ superset);
-    }
-
-    private static ArrayList<Integer> supersetHelper(int seed, int n) {
-        int k = Integer.bitCount(n);
-        if (k == 0) {
-            return new ArrayList<>(List.of(seed));
-        } else {
-            int upper_bits = n & (n - 1);
-            int lowest_bit = n - upper_bits;
-            ArrayList<Integer> lower = Utils.supersetHelper(seed, upper_bits);
-            List<Integer> upper = Utils.map(lower, arg -> arg | lowest_bit);
-            lower.addAll(upper);
-            return lower;
-        }
-    }
-
-    public static <T> HashMap<Integer, T> setMap(T[] arr, int set) {
-        HashMap<Integer, T> elements = new HashMap<>();
-        while (set != 0) {
-            elements.put(set & -set, arr[Integer.numberOfTrailingZeros(set)]);
-            set &= (set - 1);
-        }
-        return elements;
-    }
-
-    public static <T> ArrayList<T> setParse(T[] arr, int set) {
-        ArrayList<T> elements = new ArrayList<>();
-        while (set != 0) {
-            elements.add(arr[Integer.numberOfTrailingZeros(set)]);
-            set &= (set - 1);
-        }
-        return elements;
-    }
-
-    public static <T, U> List<U> cyclic(List<T> args, Function<List<T>, U> func) {
-        U[] terms = (U[]) new Object[args.size()];
-        for (int i = 0; i < args.size(); i++) {
-            terms[i] = func.apply(args);
-            args.add(0, args.remove(args.size() - 1));
-        }
-        return List.of(terms);
     }
 
     public static String overline(String s) {
